--- a/document_final.tex
+++ b/document_final.tex
@@ -389,7 +389,7 @@ En utilisant le lemme \ref{pois}, on a donc :
 \nonumber\\&\geqslant P(\bigcup_{z\in\Sigma}\{A(\Delta_n,\zeta_z^{N'_z})\not\subset\mathbb{B}(0,n+3h(n))\})P(X_n\leqslant\lambda_n)
 \nonumber\\&=P(X_n\leqslant\lambda_n)\big(1-\prod_{z\in\Sigma}\big(1-P(A(\Delta_n,\zeta_z^{N'_z})\not\subset\mathbb{B}(0,n+3h(n)))\big)\big).
 \end{align}
-Or, d'après la proposition \ref{step2},
+Or, d'après la proposition \ref{step2}\footnote{ce résultat ne découle pas directement de la proposition \ref{step2} à cause de la probabilité conditionnelle, mais la démonstration est exactement la même.},
 \begin{align}
 \label{18}
 \nonumber &P(A(\Delta_n,\zeta_z^{N'_z})\not\subset\mathbb{B}(0,n+3h(n)))
